# trelib

./: CMakeLists.txt  README.rst
build-aux/: user_project.vcxproj.in
build-aux/cmake/: FindZLib.cmake
cmake/: treLibConfig.cmake.in
tools/: CMakeLists.txt
tools/testArchive/: CMakeLists.txt
tools/treBuild/: CMakeLists.txt
tools/treDump/: CMakeLists.txt
treLib/: CMakeLists.txt  config_reader.cc  config_reader.h  treClass.cpp  treDataBlock.cpp  tre_archive.cc  tre_archive.h  tre_data.h  tre_reader.cc  tre_reader.h
